# article_summarizer_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Descricao_Portfolio.md  Descricao_Portfolio_article_summarizer_agent.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  SECURITY.md  app.py  celery_app.py  config.py  database.py  docker-compose.yml  example_usage.py  main.py  models.py  pyproject.toml  render-build.sh  render-start.sh  render.yaml  requirements-dev.txt  requirements.txt  setup.py  start_app.py  test_advanced_waf_bypass.py  test_datacamp_selenium.py  test_datacamp_waf.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_tasks.py  0002_add_identity_audit_settings.py  0003_add_dead_letter.py  0004_add_outbox.py  0005_add_idempotency_key.py
application/: __init__.py  commands.py  event_bus.py  ports.py  queries.py
application/handlers/: admin_handlers.py  (+2 more)
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DEPLOYMENT.md  HOSPEDAGEM_GRATUITA.md
domain/: __init__.py  entities.py  events.py  repositories.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infrastructure/: auth.py  container.py  pipeline.py  repositories.py  runtime_settings.py
modules/: __init__.py  auth.py  cache.py  circuit_breaker.py  file_manager.py  gemini_summarizer.py  logging_config.py  metrics.py  rate_limiter.py  secrets_manager.py  selenium_scraper.py  summarizer.py  text_processor.py  tracing.py  url_utils.py  web_scraper.py
monitoring/: prometheus.yml
presentation/: app_factory.py
scripts/: dev.ps1
tasks/: outbox_relay.py  summarization_task.py
templates/: about.html  base.html  error.html  history.html  index.html  login.html  settings.html
tests/: conftest.py  test_api.py  test_app_utils.py  test_config.py  test_db_integration.py  test_domain_entities.py  test_messaging_integration.py  test_outbox_integration.py  test_pipeline_integration.py  test_react_api_alignment.py  test_runtime_services.py  test_ssrf.py  test_summarizer.py  test_text_processor.py  test_web_scraper_integration.py
(+32 files in other folders)
