[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "article-summarizer-agent"
version = "2.0.0"
description = "Autonomous agent that extracts and summarises web articles using Gemini or extractive TF-IDF."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
summarize = "main:main"

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv", ".git", "__pycache__", "build", "dist",
    "outputs", ".cache", ".model_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default arg (Flask routes)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["modules", "config", "main", "app"]
omit = [
    "tests/*",
    ".venv/*",
    "setup.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
